[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for MKW41Z microcontrollers"
documentation = "https://docs.rs/mkw41z-hal"
keywords = [
    "arm",
    "cortex-m",
    "MKW41Z",
    "hal",
]
license = "0BSD"
name = "mkw41z-hal"
repository = "https://github.com/therealprof/mkw41z-hal"
version = "0.1.1"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.4.3"
mkw41z = "0.1.0"
nb = "0.1.1"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.1.2"

[features]
default = ["rt"]
rt = ["mkw41z/rt"]

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
